# RnP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c++/: benchmark.cpp  danilevsky.h  iterative.cpp  iterative.h  prepare.h  prepareDoubleLin.h  prepareSingleLin.h  python_bindings.cpp  r6p.cpp  r6pDoubleLin.cpp  r6pSingleLin.cpp  r6p_1lin.cpp  r6p_2lin.cpp  r6p_iter.cpp  r7pf.cpp  r7pfr.cpp  rnp.cpp  rnp.h  scene_generator.cpp  scene_generator.h  sturm.cpp  sturm.h  tests.cpp  utils.cpp  utils.h
cython/: rnppy.cpp  rnppy.pyx  setup.py  setup.py.in
matlab/: r6p1lin.cpp  r6p2lin.cpp  r6pIter.cpp  r6pSingleLinMex.cpp  r7pf.cpp  r7pfr.cpp
matlab/r7p/: r7p_lin_all_focal.m  r7p_lin_all_focal_radial_minimal.m
python/: main.py  ransac.py  rnp.py  utils.py
tests/: test_r6p_1lin.cpp  test_r6p_2lin.cpp  test_r6p_doublelin.cpp  test_r6p_iter.cpp  test_r6p_singlelin.cpp  test_r7pf.cpp  test_r7pfr.cpp  test_rs_projections.cpp
